# dst-factory

./: .spelling  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  codecov.yml  constants.env  out.txt  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  release.yml
dst-factory/: Cargo.toml
dst-factory/src/: lib.rs  macro_args.rs
dst-factory/tests/: tests.rs
dst-factory/tests/ui/: last_field_not_slice_or_str.rs  last_field_not_slice_or_str.stderr  multiple_dst_fields.rs  need_no_std.stderr  no_comma_after_visibility.rs  no_comma_after_visibility.stderr  no_std.rs  string_in_attribute.rs  string_in_attribute.stderr  struct_with_no_fields.rs  unnamed_fields.rs
examples/: Cargo.toml  serde.rs  simple.rs
examples/src/: main.rs
src/: box.rs  common.rs  lib.rs  macro_args.rs  serde.rs  serde_impls.rs
tail-extend/: Cargo.toml
tail-extend/src/: lib.rs
tail-extend/tests/: tests.rs
tail-extend/tests/ui/: bad_visibility.rs  bad_visibility.stderr  dst_field_not_last.rs  last_field_not_slice_or_str.rs  macro_not_on_struct.rs  multiple_dst_fields.rs  multiple_dst_fields.stderr  need_no_std.rs  need_no_std.stderr  no_comma_after_visibility.rs  no_comma_after_visibility.stderr  no_std.rs  string_in_attribute.rs  string_in_attribute.stderr  struct_with_no_fields.rs  too_many_tokens.rs  too_many_tokens.stderr  unnamed_fields.rs  unnamed_fields.stderr
tests/: test_drop_iter.rs  test_slice_tuple.rs  test_zeroable.rs  tests.rs
tests/ui/: bad_str.rs  bad_str.stderr  bad_visibility.rs  bad_visibility.stderr  clone_trait_object.rs  clone_trait_object.stderr  deserialize_trait_object.rs  deserialize_trait_object.stderr  dst_field_not_last.rs  dst_field_not_last.stderr  higher_rank_trait.rs  higher_rank_trait.stderr  last_field_not_slice_or_str.stderr  macro_not_on_struct.rs  macro_not_on_struct.stderr  multiple_dst_fields.stderr  need_no_std.rs  no_comma_after_clone.rs  no_comma_after_clone.stderr  no_comma_after_debug.rs  no_comma_after_debug.stderr  no_comma_after_deserialize.rs  no_comma_after_deserialize.stderr  no_comma_after_destructurer.rs  no_comma_after_destructurer.stderr  no_comma_after_eq.rs  no_comma_after_eq.stderr  no_comma_after_factory_name.rs  no_comma_after_factory_name.stderr  no_comma_after_hash.rs  no_comma_after_hash.stderr  no_comma_after_iterator.rs  no_comma_after_iterator.stderr  no_comma_after_no_std.rs  no_comma_after_no_std.stderr  no_comma_after_ord.rs  no_comma_after_ord.stderr  no_comma_after_zeroable.rs  no_comma_after_zeroable.stderr  no_std.rs  (+10 more)
