[package]
resolver = "3"
name = "dst-factory"
version = "0.1.0"
description = "Macro to implement C's flexible array members in Rust"
categories = ["memory-management", "no-std"]
keywords = ["memory", "no_std", "ffi", "dst"]
repository = "https://github.com/geeknoid/dst-factory"
authors = ["Martin Taillefer <martin@taillefer.org>"]
license = "MIT"
readme = "README.md"
edition = "2024"
rust-version = "1.87.0"

[lib]
name = "dst_factory"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.101", features = ["full", "clone-impls", "parsing", "printing"], default-features = false }
quote = "1.0.40"
proc-macro2 = "1.0.95"

[dev-dependencies]
trybuild = "1.0.105"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
