[package]
resolver = "3"
name = "example"
publish = false
version.workspace = true
edition.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
dst-factory = { workspace = true }

[lints]
workspace = true
