[package]
resolver = "3"
name = "tail-extend"
description = "Macros to implement C's flexible array members in Rust"
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "tail_extend"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["parsing", "printing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
